// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing loresheet action creators should create a buy option action 1`] = `
Object {
  "cost": Object {
    "canPay": true,
    "destiny": 0,
    "original": 0,
  },
  "lsUid": "wulinsage",
  "payload": undefined,
  "type": "LORESHEET_BUY_OPTION",
  "uid": "fact",
}
`;

exports[`Testing loresheet action creators should create an open action 1`] = `
Object {
  "cost": Object {
    "canPay": true,
    "destiny": 0,
    "original": 0,
  },
  "type": "LORESHEET_OPEN",
  "uid": "wulinsage",
}
`;
